samples/_failures_safe/1761040624_ab0653_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_be88d435.c: In function ‘main’:
./samples/SAFE/__tmp_be88d435.c:162:23: error: expected ‘)’ at end of input
  162 |     print_matrix(&mat2
      |                 ~     ^
      |                       )
./samples/SAFE/__tmp_be88d435.c:162:5: error: expected declaration or statement at end of input
  162 |     print_matrix(&mat2
      |     ^~~~~~~~~~~~
